dns/dnscrypt-proxy: Update to v2.0.45, various fixes, upgrades.

--- a/dns/dnscrypt-proxy/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
+++ b/dns/dnscrypt-proxy/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
@@ -1,36 +1,180 @@
+################################################################################
+# Service Actions                                                              #
+################################################################################
+
+[status]
+command:/usr/local/etc/rc.d/dnscrypt-proxy onestatus
+parameters:
+type:script_output
+message:request dnscrypt-proxy status
+
 [start]
-command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/setup.sh;/usr/local/etc/rc.d/dnscrypt-proxy start
+command:/usr/local/etc/rc.d/dnscrypt-proxy onestart
 parameters:
 type:script
 message:starting dnscrypt-proxy
 
 [stop]
-command:/usr/local/etc/rc.d/dnscrypt-proxy stop
+command:/usr/local/etc/rc.d/dnscrypt-proxy onestop
 parameters:
 type:script
 message:stopping dnscrypt-proxy
 
 [restart]
-command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/setup.sh;/usr/local/etc/rc.d/dnscrypt-proxy restart
+command:/usr/local/etc/rc.d/dnscrypt-proxy onerestart
 parameters:
 type:script
 message:restarting dnscrypt-proxy
 
-[status]
-command:/usr/local/etc/rc.d/dnscrypt-proxy status; exit 0
+################################################################################
+# Command Functions                                                            #
+################################################################################
+
+[resolve]
+command:/usr/local/sbin/dnscrypt-proxy -child -config /usr/local/etc/dnscrypt-proxy/dnscrypt-proxy.toml -resolve
+parameters: %s
+type:script_output
+message:dnscrypt-proxy resolve hostname
+
+[show-certs]
+command:/usr/local/sbin/dnscrypt-proxy -child -config /usr/local/etc/dnscrypt-proxy/dnscrypt-proxy.toml -show-certs
 parameters:
 type:script_output
-message:request dnscrypt-proxy status
+message:dnscrypt-proxy show DoH cert chains
 
-[dnsbl]
-command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/dnsbl.sh
+[config-check]
+command:(/usr/local/sbin/dnscrypt-proxy -child -config /usr/local/etc/dnscrypt-proxy/dnscrypt-proxy.toml -check 2>&1;exit 0)
+parameters:
+type:script_output
+message:dnscrypt-proxy config check
+
+################################################################################
+# Query Functions
+################################################################################
+
+# Uses python to execute dnscrypt-proxy, and encode output to json and returns.
+# This retrieves from dnscrypt-proxy a list of the server names currently configured.
+# This includes servers from sources, and also the [static] defined servers.
+# Used by: server_names, disabled_server_names, [broken_implementations].fragments_blocked
+[get-resolvers]
+command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/get-resolvers.py
 parameters: %s
-type:script
-message:fetching DNSBLs
+type:script_output
+message:get resolvers, return in json
 
-[dnsblcron]
-command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/dnsbl.sh;/usr/local/etc/rc.d/dnscrypt-proxy restart
+# Uses php to look up sources file names (enabled only), which runs a python
+# script which then loads an sdns library to analyze the stamps to identify
+# from the list of servers which ones are relays, and returns a json list.
+# Uses php to look up sources file names (enabled only), which runs a python
+# script which then loads an sdns library to analyze the stamps to identify
+# from the list of servers which ones are relays, and returns a json list
+# that includes only their names.
+# Used by: [anonymized_dns].via
+[get-relays]
+command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/get-relays.php
+parameters: %s
+type:script_output
+message:Get relays from sources(.md) files and return in json
+
+################################################################################
+# Import functions
+################################################################################
+
+[import-list]
+command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/import-list.py
+parameters: %s %s
+type:script_output
+message:importing file
+description: Perform validation on list, and imports if no errors occurred.
+
+[import-doh-certs]
+command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/import-doh-certs.php
+parameters:
+type:script_output
+message:importing local DoH certificates, and certificate keys
+description: Import the local DoH certificates, and certificate keys from the config.
+
+[import-doh-client-certs]
+command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/import-doh-client-certs.php
+parameters:
+type:script_output
+message:importing local DoH certificates, and certificate keys
+description: Import the DoH client certificates, and client certificate keys from the config.
+
+################################################################################
+# Export functions
+################################################################################
+
+[export-blocked_names_file_manual]
+command:/bin/cat /usr/local/etc/dnscrypt-proxy/blocked-names-manual.txt
+parameters:
+type:script_output
+message: exporting blocked-names-manual.txt
+description: This exports the blocked-names-manual.txt file to stdout.
+
+[export-blocked_ips_file_manual]
+command:/bin/cat /usr/local/etc/dnscrypt-proxy/blocked-ips-manual.txt
+parameters:
+type:script_output
+message: exporting blocked-ips-manual.txt
+description: This exports the blocked-ips-manual.txt file to stdout.
+
+[export-allowed_names_file_manual]
+command:/bin/cat /usr/local/etc/dnscrypt-proxy/allowed-names-manual.txt
+parameters:
+type:script_output
+message: exporting allowed-names-manual.txt
+description: This exports the allowed-names-manual.txt file to stdout.
+
+[export-allowed_ips_file_manual]
+command:/bin/cat /usr/local/etc/dnscrypt-proxy/allowed-ips-manual.txt
+parameters:
+type:script_output
+message: exporting allowed-ips-manual.txt
+description: This exports the allowed-ips-manual.txt file to stdout.
+
+[export-cloaking_file_manual]
+command:/bin/cat /usr/local/etc/dnscrypt-proxy/cloaking-manual.txt
+parameters:
+type:script_output
+message: exporting cloaking-manual.txt
+description: This exports the cloaking-manual.txt file to stdout.
+
+################################################################################
+# Remove functions
+################################################################################
+
+[remove-blocked_names_file_manual]
+command:/bin/rm /usr/local/etc/dnscrypt-proxy/blocked-names-manual.txt
 parameters:
 type:script
-message:fetching DNSBLs and restart
-description: Download DNSCrypt-Proxy DNSBLs and restart
+message: removing blocked-names-manual.txt
+description: This removes the blocked-names-manual.txt file.
+
+[remove-blocked_ips_file_manual]
+command:/bin/rm /usr/local/etc/dnscrypt-proxy/blocked-ips-manual.txt
+parameters:
+type:script
+message: removing blocked-ips-manual.txt
+description: This removes the blocked-ips-manual.txt file.
+
+[remove-allowed_names_file_manual]
+command:/bin/rm /usr/local/etc/dnscrypt-proxy/allowed-names-manual.txt
+parameters:
+type:script
+message: removing allowed-names-manual.txt
+description: This removes the allowed-names-manual.txt file.
+
+[remove-allowed_ips_file_manual]
+command:/bin/rm /usr/local/etc/dnscrypt-proxy/allowed-ips-manual.txt
+parameters:
+type:script
+message: removing allowed-ips-manual.txt
+description: This removes the allowed-ips-manual.txt file.
+
+[remove-cloaking_file_manual]
+command:/bin/rm /usr/local/etc/dnscrypt-proxy/cloaking-manual.txt
+parameters:
+type:script
+message: removing cloaking-manual.txt
+description: This removes the cloaking-manual.txt file.
