dns/dnscrypt-proxy: get-relays.py read config instead of through php
* Integrated parse the config into python instead of using
  php to do it and then passing to python.
* Added a configuration file with some globals to allow code
  to be more portable.
* Remove unused php file.
* Updated configd configuration to use only the python script.
* Updated comments there as well.
* Other general comments.

--- a/dns/dnscrypt-proxy/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
+++ b/dns/dnscrypt-proxy/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
@@ -62,16 +62,12 @@ parameters: %s
 type:script_output
 message:get resolvers, return in json
 
-# Uses php to look up sources file names (enabled only), which runs a python
-# script which then loads an sdns library to analyze the stamps to identify
-# from the list of servers which ones are relays, and returns a json list.
-# Uses php to look up sources file names (enabled only), which runs a python
-# script which then loads an sdns library to analyze the stamps to identify
-# from the list of servers which ones are relays, and returns a json list
-# that includes only their names.
+# Uses python to look up sources file names (enabled only), to analyze the
+# SDNS stamps to identify from the list of servers which ones are relays,
+# and returns a json list.
 # Used by: [anonymized_dns].via
 [get-relays]
-command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/get-relays.php
+command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/get-relays.py
 parameters: %s
 type:script_output
 message:Get relays from sources(.md) files and return in json
