dns/dnscrypt-proxy: Swap PHP scripts for python, other cleanup
* Re-wrote PHP scripts in python.
* Lots of style/cleanup in python scripts
* Updating other necessary files to utilize new python scripts.
* Fixing some minor issues in SettingsController.php

--- a/dns/dnscrypt-proxy/src/opnsense/service/conf/dnscrypt-proxy.conf
+++ b/dns/dnscrypt-proxy/src/opnsense/service/conf/dnscrypt-proxy.conf
@@ -3,4 +3,5 @@ name:dnscrypt-proxy
 label:DNSCrypt Proxy
 api_name:dnscryptproxy
 configd_name:dnscryptproxy
-config_dir:/usr/local/etc/dnscrypt-proxy
+conf_dir:/usr/local/etc/dnscrypt-proxy
+config_node:dnscrypt-proxy
