--- a/dns/dnscrypt-proxy/Makefile
+++ b/dns/dnscrypt-proxy/Makefile
@@ -1,6 +1,7 @@
 PLUGIN_NAME=		dnscrypt-proxy
-PLUGIN_VERSION=		1.9
-PLUGIN_COMMENT=		Flexible DNS proxy supporting DNSCrypt and DoH
+PLUGIN_VERSION=		2.0.45
+PLUGIN_REVISIOM=	1
+PLUGIN_COMMENT=		dnscrypt-proxy configuration front-end
 PLUGIN_DEPENDS=		dnscrypt-proxy2
 PLUGIN_MAINTAINER=	m.muenz@gmail.com
 
