dns/dnscrypt-proxy: Adding Version tab to diagnostics
* To display the current version of dnscrypt-proxy
* Minor tweaks to style in actions_dnscryptproxy.conf

--- a/dns/dnscrypt-proxy/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
+++ b/dns/dnscrypt-proxy/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
@@ -6,25 +6,25 @@
 command:/usr/local/etc/rc.d/dnscrypt-proxy onestatus
 parameters:
 type:script_output
-message:request dnscrypt-proxy status
+message: dnscrypt-proxy: request status
 
 [start]
 command:/usr/local/etc/rc.d/dnscrypt-proxy onestart
 parameters:
 type:script
-message:starting dnscrypt-proxy
+message: dnscrypt-proxy: starting
 
 [stop]
 command:/usr/local/etc/rc.d/dnscrypt-proxy onestop
 parameters:
 type:script
-message:stopping dnscrypt-proxy
+message: dnscrypt-proxy: stopping
 
 [restart]
 command:/usr/local/etc/rc.d/dnscrypt-proxy onerestart
 parameters:
 type:script
-message:restarting dnscrypt-proxy
+message: dnscrypt-proxy: restarting
 
 ################################################################################
 # Command Functions                                                            #
@@ -34,19 +34,25 @@ message:restarting dnscrypt-proxy
 command:/usr/local/sbin/dnscrypt-proxy -child -config /usr/local/etc/dnscrypt-proxy/dnscrypt-proxy.toml -resolve
 parameters: %s
 type:script_output
-message:dnscrypt-proxy resolve hostname
+message: dnscrypt-proxy: resolve hostname: "%s"
 
 [show-certs]
 command:/usr/local/sbin/dnscrypt-proxy -child -config /usr/local/etc/dnscrypt-proxy/dnscrypt-proxy.toml -show-certs
 parameters:
 type:script_output
-message:dnscrypt-proxy show DoH cert chains
+message: dnscrypt-proxy: show DoH cert chains
 
 [config-check]
 command:(/usr/local/sbin/dnscrypt-proxy -child -config /usr/local/etc/dnscrypt-proxy/dnscrypt-proxy.toml -check 2>&1;exit 0)
 parameters:
 type:script_output
-message:dnscrypt-proxy config check
+message: dnscrypt-proxy: config check
+
+[version]
+command:/usr/local/sbin/dnscrypt-proxy -version
+parameters:
+type:script_output
+message: dnscrypt-proxy: show version
 
 ################################################################################
 # Query Functions
@@ -60,7 +66,8 @@ message:dnscrypt-proxy config check
 command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/get_resolvers.py
 parameters: %s
 type:script_output
-message:get resolvers, return in json
+message: dnscrypt-proxy: get resolvers "%s"
+description: Gets list of resolvers from dnscrypt-proxy, and returns a json list of servers.
 
 # Uses python to look up sources file names (enabled only), to analyze the
 # SDNS stamps to identify from the list of servers which ones are relays,
@@ -70,7 +77,8 @@ message:get resolvers, return in json
 command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/get_relays.py
 parameters: %s
 type:script_output
-message:Get relays from sources(.md) files and return in json
+message: dnscrypt-proxy: get relays "%s"
+description: Gets relays from configured sources files, and returns json list of relays.
 
 ################################################################################
 # Import functions
@@ -80,14 +88,14 @@ message:Get relays from sources(.md) files and return in json
 command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/import_list.py
 parameters: %s %s
 type:script_output
-message:importing file
-description: Perform validation on list, and imports if no errors occurred.
+message: dnscrypt-proxy: importing file "%s" "%s"
+description: dnscrypt-proxy: perform validation on list, and imports if no errors occurred.
 
 [import-doh-client-certs]
 command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/import_doh_client_certs.py
 parameters:
 type:script_output
-message:importing local DoH certificates, and certificate keys
+message: dnscrypt-proxy: importing local DoH certificates, and certificate keys
 description: Import the DoH client certificates, and client certificate keys from the config.
 
 ################################################################################
@@ -98,35 +106,35 @@ description: Import the DoH client certificates, and client certificate keys fro
 command:/bin/cat /usr/local/etc/dnscrypt-proxy/blocked-names-manual.txt
 parameters:
 type:script_output
-message: exporting blocked-names-manual.txt
+message: dnscrypt-proxy: exporting blocked-names-manual.txt
 description: This exports the blocked-names-manual.txt file to stdout.
 
 [export-blocked_ips_file_manual]
 command:/bin/cat /usr/local/etc/dnscrypt-proxy/blocked-ips-manual.txt
 parameters:
 type:script_output
-message: exporting blocked-ips-manual.txt
+message: dnscrypt-proxy: exporting blocked-ips-manual.txt
 description: This exports the blocked-ips-manual.txt file to stdout.
 
 [export-allowed_names_file_manual]
 command:/bin/cat /usr/local/etc/dnscrypt-proxy/allowed-names-manual.txt
 parameters:
 type:script_output
-message: exporting allowed-names-manual.txt
+message: dnscrypt-proxy: exporting allowed-names-manual.txt
 description: This exports the allowed-names-manual.txt file to stdout.
 
 [export-allowed_ips_file_manual]
 command:/bin/cat /usr/local/etc/dnscrypt-proxy/allowed-ips-manual.txt
 parameters:
 type:script_output
-message: exporting allowed-ips-manual.txt
+message: dnscrypt-proxy: exporting allowed-ips-manual.txt
 description: This exports the allowed-ips-manual.txt file to stdout.
 
 [export-cloaking_file_manual]
 command:/bin/cat /usr/local/etc/dnscrypt-proxy/cloaking-manual.txt
 parameters:
 type:script_output
-message: exporting cloaking-manual.txt
+message: dnscrypt-proxy: exporting cloaking-manual.txt
 description: This exports the cloaking-manual.txt file to stdout.
 
 ################################################################################
@@ -137,33 +145,33 @@ description: This exports the cloaking-manual.txt file to stdout.
 command:/bin/rm /usr/local/etc/dnscrypt-proxy/blocked-names-manual.txt
 parameters:
 type:script
-message: removing blocked-names-manual.txt
+message: dnscrypt-proxy: removing blocked-names-manual.txt
 description: This removes the blocked-names-manual.txt file.
 
 [remove-blocked_ips_file_manual]
 command:/bin/rm /usr/local/etc/dnscrypt-proxy/blocked-ips-manual.txt
 parameters:
 type:script
-message: removing blocked-ips-manual.txt
+message: dnscrypt-proxy: removing blocked-ips-manual.txt
 description: This removes the blocked-ips-manual.txt file.
 
 [remove-allowed_names_file_manual]
 command:/bin/rm /usr/local/etc/dnscrypt-proxy/allowed-names-manual.txt
 parameters:
 type:script
-message: removing allowed-names-manual.txt
+message: dnscrypt-proxy: removing allowed-names-manual.txt
 description: This removes the allowed-names-manual.txt file.
 
 [remove-allowed_ips_file_manual]
 command:/bin/rm /usr/local/etc/dnscrypt-proxy/allowed-ips-manual.txt
 parameters:
 type:script
-message: removing allowed-ips-manual.txt
+message: dnscrypt-proxy: removing allowed-ips-manual.txt
 description: This removes the allowed-ips-manual.txt file.
 
 [remove-cloaking_file_manual]
 command:/bin/rm /usr/local/etc/dnscrypt-proxy/cloaking-manual.txt
 parameters:
 type:script
-message: removing cloaking-manual.txt
+message: dnscrypt-proxy: removing cloaking-manual.txt
 description: This removes the cloaking-manual.txt file.
