dns/dnscrypt-proxy: Add view configuration diagnostics apge
* Add python script for displaying configuration files
* Add page on Diagnostics for displaying configuration files
* Add support for dropdown menu selection for command type
* Add conditions for both input/selectpicker styles in macros

--- a/dns/dnscrypt-proxy-ng/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
@@ -47,6 +47,7 @@ command:(/usr/local/sbin/dnscrypt-proxy -child -config /usr/local/etc/dnscrypt-p
 parameters:
 type:script_output
 message: dnscrypt-proxy: config check
+description: dnscrypt-proxy: use dnscrypt-proxy -check to validate dnscrypt-proxy.toml
 
 [version]
 command:/usr/local/sbin/dnscrypt-proxy -version
@@ -175,3 +176,14 @@ parameters:
 type:script
 message: dnscrypt-proxy: removing cloaking-manual.txt
 description: This removes the cloaking-manual.txt file.
+
+################################################################################
+# View functions
+################################################################################
+
+[config-view]
+command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/view_config.py
+parameters: %s
+type:script_output
+message: dnscrypt-proxy: view dnscrypt-proxy configuration files
+description: dnscrypt-proxy: view various configuration files for dnscrypt-proxy
