dns/dnscrypt-proxy: Update script descriptions and documentation
* Updated message, and description attributes to better fit where
  these messages appear.

--- a/dns/dnscrypt-proxy-ng/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
@@ -7,24 +7,28 @@ command:/usr/local/etc/rc.d/dnscrypt-proxy onestatus
 parameters:
 type:script_output
 message: dnscrypt-proxy: request status
+description: dnscrypt-proxy: Request status
 
 [start]
 command:/usr/local/etc/rc.d/dnscrypt-proxy onestart
 parameters:
 type:script
 message: dnscrypt-proxy: starting
+description: dnscrypt-proxy: Start service
 
 [stop]
 command:/usr/local/etc/rc.d/dnscrypt-proxy onestop
 parameters:
 type:script
 message: dnscrypt-proxy: stopping
+description: dnscrypt-proxy: Stop service
 
 [restart]
 command:/usr/local/etc/rc.d/dnscrypt-proxy onerestart
 parameters:
 type:script
 message: dnscrypt-proxy: restarting
+description: dnscrypt-proxy: Restart service
 
 ################################################################################
 # Command Functions                                                            #
@@ -34,26 +38,29 @@ message: dnscrypt-proxy: restarting
 command:/usr/local/sbin/dnscrypt-proxy -child -config /usr/local/etc/dnscrypt-proxy/dnscrypt-proxy.toml -resolve
 parameters: %s
 type:script_output
-message: dnscrypt-proxy: resolve hostname: "%s"
+message: dnscrypt-proxy: resolving hostname: "%s"
+description: dnscrypt-proxy: Resolve hostname: "%s"
 
 [show-certs]
 command:/usr/local/sbin/dnscrypt-proxy -child -config /usr/local/etc/dnscrypt-proxy/dnscrypt-proxy.toml -show-certs
 parameters:
 type:script_output
-message: dnscrypt-proxy: show DoH cert chains
+message: dnscrypt-proxy: showing DoH cert chains
+description: dnscrypt-proxy: Show DoH cert chains
 
 [config-check]
 command:(/usr/local/sbin/dnscrypt-proxy -child -config /usr/local/etc/dnscrypt-proxy/dnscrypt-proxy.toml -check 2>&1;exit 0)
 parameters:
 type:script_output
-message: dnscrypt-proxy: config check
-description: dnscrypt-proxy: use dnscrypt-proxy -check to validate dnscrypt-proxy.toml
+message: dnscrypt-proxy: performing config check
+description: dnscrypt-proxy: Use dnscrypt-proxy -check to validate dnscrypt-proxy.toml
 
 [version]
 command:/usr/local/sbin/dnscrypt-proxy -version
 parameters:
 type:script_output
-message: dnscrypt-proxy: show version
+message: dnscrypt-proxy: showing version
+description: dnscrypt-proxy: Show version
 
 ################################################################################
 # Query Functions
@@ -67,8 +74,8 @@ message: dnscrypt-proxy: show version
 command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/get_resolvers.py
 parameters: %s
 type:script_output
-message: dnscrypt-proxy: get resolvers "%s"
-description: Gets list of resolvers from dnscrypt-proxy, and returns a json list of servers.
+message: dnscrypt-proxy: getting resolvers "%s"
+description: dnscrypt-proxy: Get list of resolvers from dnscrypt-proxy, and return a json list of servers
 
 # Uses python to look up sources file names (enabled only), to analyze the
 # SDNS stamps to identify from the list of servers which ones are relays,
@@ -79,7 +86,7 @@ command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/get_relays.py
 parameters: %s
 type:script_output
 message: dnscrypt-proxy: get relays "%s"
-description: Gets relays from configured sources files, and returns json list of relays.
+description: dnscrypt-proxy: Get relays from configured sources files, and return json list of relays
 
 ################################################################################
 # Import functions
@@ -90,14 +97,14 @@ command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/import_list.py
 parameters: %s %s
 type:script_output
 message: dnscrypt-proxy: importing file "%s" "%s"
-description: dnscrypt-proxy: perform validation on list, and imports if no errors occurred.
+description: dnscrypt-proxy: Perform validation on list, and imports if no errors occurred
 
 [import-doh-client-certs]
 command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/import_doh_client_certs.py
 parameters:
 type:script_output
 message: dnscrypt-proxy: importing local DoH certificates, and certificate keys
-description: Import the DoH client certificates, and client certificate keys from the config.
+description: dnscrypt-proxy: Import the DoH client certificates, and client certificate keys from the config
 
 ################################################################################
 # Export functions
@@ -108,35 +115,35 @@ command:/bin/cat /usr/local/etc/dnscrypt-proxy/blocked-names-manual.txt
 parameters:
 type:script_output
 message: dnscrypt-proxy: exporting blocked-names-manual.txt
-description: This exports the blocked-names-manual.txt file to stdout.
+description: dnscrypt-proxy: Export the blocked-names-manual.txt file to stdout
 
 [export-blocked_ips_file_manual]
 command:/bin/cat /usr/local/etc/dnscrypt-proxy/blocked-ips-manual.txt
 parameters:
 type:script_output
 message: dnscrypt-proxy: exporting blocked-ips-manual.txt
-description: This exports the blocked-ips-manual.txt file to stdout.
+description: dnscrypt-proxy: Export the blocked-ips-manual.txt file to stdout
 
 [export-allowed_names_file_manual]
 command:/bin/cat /usr/local/etc/dnscrypt-proxy/allowed-names-manual.txt
 parameters:
 type:script_output
 message: dnscrypt-proxy: exporting allowed-names-manual.txt
-description: This exports the allowed-names-manual.txt file to stdout.
+description: dnscrypt-proxy: Export the allowed-names-manual.txt file to stdout
 
 [export-allowed_ips_file_manual]
 command:/bin/cat /usr/local/etc/dnscrypt-proxy/allowed-ips-manual.txt
 parameters:
 type:script_output
 message: dnscrypt-proxy: exporting allowed-ips-manual.txt
-description: This exports the allowed-ips-manual.txt file to stdout.
+description: dnscrypt-proxy: Export the allowed-ips-manual.txt file to stdout
 
 [export-cloaking_file_manual]
 command:/bin/cat /usr/local/etc/dnscrypt-proxy/cloaking-manual.txt
 parameters:
 type:script_output
 message: dnscrypt-proxy: exporting cloaking-manual.txt
-description: This exports the cloaking-manual.txt file to stdout.
+description: dnscrypt-proxy: Export the cloaking-manual.txt file to stdout
 
 ################################################################################
 # Remove functions
@@ -147,35 +154,35 @@ command:/bin/rm /usr/local/etc/dnscrypt-proxy/blocked-names-manual.txt
 parameters:
 type:script
 message: dnscrypt-proxy: removing blocked-names-manual.txt
-description: This removes the blocked-names-manual.txt file.
+description: dnscrypt-proxy: Remove the blocked-names-manual.txt file
 
 [remove-blocked_ips_file_manual]
 command:/bin/rm /usr/local/etc/dnscrypt-proxy/blocked-ips-manual.txt
 parameters:
 type:script
 message: dnscrypt-proxy: removing blocked-ips-manual.txt
-description: This removes the blocked-ips-manual.txt file.
+description: dnscrypt-proxy: Remove the blocked-ips-manual.txt file
 
 [remove-allowed_names_file_manual]
 command:/bin/rm /usr/local/etc/dnscrypt-proxy/allowed-names-manual.txt
 parameters:
 type:script
 message: dnscrypt-proxy: removing allowed-names-manual.txt
-description: This removes the allowed-names-manual.txt file.
+description: dnscrypt-proxy: Remove the allowed-names-manual.txt file
 
 [remove-allowed_ips_file_manual]
 command:/bin/rm /usr/local/etc/dnscrypt-proxy/allowed-ips-manual.txt
 parameters:
 type:script
 message: dnscrypt-proxy: removing allowed-ips-manual.txt
-description: This removes the allowed-ips-manual.txt file.
+description: dnscrypt-proxy: Remove the allowed-ips-manual.txt file
 
 [remove-cloaking_file_manual]
 command:/bin/rm /usr/local/etc/dnscrypt-proxy/cloaking-manual.txt
 parameters:
 type:script
 message: dnscrypt-proxy: removing cloaking-manual.txt
-description: This removes the cloaking-manual.txt file.
+description: dnscrypt-proxy: Remove the cloaking-manual.txt file.
 
 ################################################################################
 # View functions
@@ -185,5 +192,5 @@ description: This removes the cloaking-manual.txt file.
 command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/view_config.py
 parameters: %s
 type:script_output
-message: dnscrypt-proxy: view dnscrypt-proxy configuration files
-description: dnscrypt-proxy: view various configuration files for dnscrypt-proxy
+message: dnscrypt-proxy: viewing dnscrypt-proxy configuration files
+description: dnscrypt-proxy: View various configuration files for dnscrypt-proxy
