dns/dnscrypt-proxy: Add about page, new macro features
Menu.xml
* Add About page to Menu.xml
* Update Logs order number in Menu.xml

+macros.volt
* Update/correct comments/documentation
* Update to use new base_form variable 'this_part'
* Add new structure for drawing a box using just fields

base_form.volt
* Update/clarify documentation
* Update to use 'this_part' instead of 'this_tab'

form_input_tr.volt
* Add field type for 'variable' (used on about page)

diagnostics.volt
* Update macro call to pass this_form array
* Update comment to be accurate

logs.volt
* Update macro call to pass this_form array

settings.volt
* Update macro call to pass this_form array

actions_dnscryptproxy.conf
* Add command to get plugin version from pkg

AboutController.php
* New controller for About page

about.volt
* New template for about page

about.xml
* New form for about page

README.mk
* Update for about page
* Minor tweaks

--- a/dns/dnscrypt-proxy-ng/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
@@ -62,6 +62,16 @@ type:script_output
 message: dnscrypt-proxy: showing version
 description: dnscrypt-proxy: Show version
 
+#######
+### Needs to be changed to reflect true package name, not devel version. ##
+#######
+[plugin_version]
+command:/usr/sbin/pkg query %v os-dnscrypt-proxy-devel
+parameters:
+type:script_output
+message: dnscrypt-proxy: showing plugin version
+description: dnscrypt-proxy: Show plugin version
+
 ################################################################################
 # Query Functions
 ################################################################################
