dns/dnscrypt-proxy: Add save/apply functionality and buttons
* controllers/.../AboutController.php
* controllers/.../DiagnosticsController.php
* controllers/.../LogsController.php
* controllers/.../SettingsController.php
  * Add plugin_label var

* views/.../about.volt
* views/.../diagnostics.volt
* views/.../logs.votl
* views/.../settings.volt
  * Add plugin_name, plugin_label, and lang to build_page() call
  * Add toggleApplyChanges() call for the settings.volt

* controllers/.../Api/ServiceController.php
  * Add logic to do make clean after successful reconfigure

* controllers/.../Api/SettingsController.php
  * Add setAction(), and stateAction()

* controllers/.../forms/settings.xml
  * Update/Add save/save_apply buttons to all tabs

* views/.../+macros.volt
  * Add apply changes box to the top of the page
  * Add conditional save and apply button to page

* views/.../layout_partials/base_form.volt
  * Add conditionals to add save/apply buttons

* views/.../layout_partials/base_script_content.volt
  * Do some code consolidation
  * Add functions:
    * toggleApplyChanges()
    * saveForm()
    * reconfigureService()
    * ajaxDataDialog()
    * busyButton()
    * clearButton()
    * clearButtonAndToggle()
  * Add attachments for:
    * Save/Save & Apply buttons
    * Save All/Save All & Apply button

* service/conf/actions.d/actions_dnscryptproxy.conf
  * Add configd commands:
    * make.dirty
    * make.clean
    * state

--- a/dns/dnscrypt-proxy-ng/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
@@ -30,6 +30,24 @@ type:script
 message: dnscrypt-proxy: restarting
 description: dnscrypt-proxy: Restart service
 
+[make.dirty]
+command:/usr/bin/touch /usr/local/etc/dnscrypt-proxy/.dirty
+type:script
+message: dnscrypt-proxy: setting dirty flag
+description: dnscrypt-proxy: Set dirty flag
+
+[make.clean]
+command:/bin/rm /usr/local/etc/dnscrypt-proxy/.dirty
+type:script
+message: dnscrypt-proxy: removing dirty flag
+description: dnscrypt-proxy: Remove dirty flag
+
+[state]
+command:[ -e "/usr/local/etc/dnscrypt-proxy/.dirty" ] && echo dirty || echo clean
+type:script_output
+message: dnscrypt-proxy: checking dirty flag state
+description: dnscrypt-proxy: Check dirty flag state
+
 ################################################################################
 # Command Functions                                                            #
 ################################################################################
