dns/dnscrypt-proxy: Add log parser functionality, updates, fixes
* controllers/.../Api/SettingsController.php
  * Style adjustment
  * Help update
  * Wrap up multi-sort so it's not sorting all the time.
  * Fix $target bug because using valid_grid_targets instead
     of class var. Instead of using $path, just wrap up whole
     section and keep $target.
  * Don't include response in returned JSON since it technically
     includes the entire dataset which may be large.

* controllers/.../Api/LogController.php
  * New controller for API end-point

* controllers/.../forms/logs.xml
  * Use new API end-point, other style
  * Add columns for each log
  * Set width for all columns accordingly
  * Add export, and clear API end-points
  * Add labels for log bootgrids
  * Make columns unsortable

* controllers/.../forms/settings.xml
  * Remove import/export from the Anonymized Routes bootgrid
     since it wouldn't be useful.

* models/.../Settings.php
  * Add $log_dir_name

* views/.../+macros.volt
  * Change default bootgrid row selection to false
     so that the checkbox column doesn't show on logs
  * Update export function to use $.ajax instead of
     ajaxGet wrapper due to having to handle both
     txt and json
  * Add click() for clear buttons

* views/.../layout_partials/form_bootgrid_tr.volt
  * Update comment, add info text about 'clear'
  * Reformat data- fields to use ternary syntax
     to prevent fields from being added when empty
  * Slight re-ordering of the data- fields
  * Fix type with 'import' export button showing
  * Pull the import/export buttons to the right of the cell
  * Increase their size to make them more visible
  * Slight padding adjustment for a aesthetics
  * Add clear log button + box at the bottom of the
     bootgrid field

* log.py
  * Initial version of log handler script

* scripts/.../actions.d/actions_dnscryptproxy.conf
  * Add [log.read] for parsing
  * Add [log.clear] for clearing

* service/templates/.../dnscrypt-proxy.tml.ji

--- a/dns/dnscrypt-proxy-ng/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/service/conf/actions.d/actions_dnscryptproxy.conf
@@ -204,3 +204,21 @@ parameters: %s
 type:script_output
 message: dnscrypt-proxy: viewing dnscrypt-proxy configuration files
 description: dnscrypt-proxy: View various configuration files for dnscrypt-proxy
+
+################################################################################
+# Logs functions
+################################################################################
+
+[log.read]
+command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/log.py
+parameters: --log %s --filter %s --limit %s --offset %s
+type:script_output
+message: dnscrypt-proxy: parse dnscrypt-proxy "%s" log file
+description: dnscrypt-proxy: Parsing"%s" log file for dnscrypt-proxy
+
+[log.clear]
+command:/usr/local/opnsense/scripts/OPNsense/Dnscryptproxy/log.py
+parameters: --log %s --clear %s
+type:script_output
+message: dnscrypt-proxy: clear dnscrypt-proxy "%s" log file
+description: dnscrypt-proxy: Clearing "%s" log file for dnscrypt-proxy
