net/mullvad: Refactor some stuff
* Refactor some of the layout_partials
* Add functionality for model specification in XMLs
* Allow multi model nesting for readonly model use case
* Some other ideas as well that probably wont use

--- a/net/mullvad/Makefile
+++ b/net/mullvad/Makefile
@@ -2,7 +2,7 @@ PLUGIN_NAME=		mullvad
 PLUGIN_VERSION=		0.1
 PLUGIN_DEVEL=       yes
 PLUGIN_COMMENT=		mullvad VPN plugin
-PLUGIN_DEPENDS=		os-wireguard
+PLUGIN_DEPENDS=		os-wireguard jq
 PLUGIN_MAINTAINER=	agh1467@protonmail.com
 
 .include "../../Mk/plugins.mk"
