--- a/net/mullvad/src/opnsense/service/conf/actions.d/actions_mullvad.conf
+++ b/net/mullvad/src/opnsense/service/conf/actions.d/actions_mullvad.conf
@@ -37,7 +37,7 @@
 [login]
 command:
     /usr/local/opnsense/scripts/OPNsense/Mullvad/account.py
-parameters: login %s
+parameters: --login %s
 type:script_output
 message: mullvad: performing login for account: "%s"
 description: mullvad: Perform login for account: "%s"
@@ -45,10 +45,27 @@ description: mullvad: Perform login for account: "%s"
 [logout]
 command:
     /usr/local/opnsense/scripts/OPNsense/Mullvad/account.py
-parameters:  logout %s
+parameters: --logout %s
 type:script_output
 message: mullvad: performing login for account: "%s"
 description: mullvad: Perform login for account: "%s"
+
+
+[status]
+command: echo '{"active" : false,"can_add_ports" : false,"can_add_wg_peers" : true,"city_ports" : [],"expires" : "2022-06-27T21:58:38+00:00","expiry_unix" : 1656367118,"max_ports" : 5,"max_wg_peers" : 5,"ports" : [],"pretty_token" : "0824 9982 5001 6939","subscription" : null,"token" : "0824998250016939","wg_peers" : [{"app" : false,"can_add_ports" : false,"city_ports" : [],"created" : "2022-06-28","device_id" : "0f8c65c1-9df4-4db5-9c4d-7a8e86dad149","device_name" : "alert pup","ipv4_address" : "10.66.141.99/32","ipv6_address" : "fc00:bbbb:bbbb:bb01::3:8d62/128","key" : {"private" : "","public" : "zLVnO6DYynxeaSc0qECNJSnAqwkOvMU0xE82KqniugI="},"ports" : []}]}'
+parameters: # --status %s
+type:script_output
+
+
+
+
+# [status]
+# command:
+#     /usr/local/opnsense/scripts/OPNsense/Mullvad/account.py
+# parameters: --status %s
+# type:script_output
+# message: mullvad: getting status for account: "%s"
+# description: mullvad: Get status for account: "%s"
 
 # [resolve]
 # command:/usr/local/sbin/dnscrypt-proxy -child -config /usr/local/etc/dnscrypt-proxy/dnscrypt-proxy.toml -resolve
