net/mullvad: Initial login procedure
* Python enhancements, error handling, etc.
* Various fixes with the volt framework
* New model type specification

--- a/net/mullvad/src/opnsense/service/conf/actions.d/actions_mullvad.conf
+++ b/net/mullvad/src/opnsense/service/conf/actions.d/actions_mullvad.conf
@@ -37,6 +37,7 @@
 [login]
 command:
     /usr/local/opnsense/scripts/OPNsense/Mullvad/account.py
+#command: echo '{"device_name": "winged buffalo","ipv4_address": "10.67.122.255/32","ipv6_address": "fc00:bbbb:bbbb:bb01::4:7afe/128","private_key": "SDd3s/22ixkhCMNjewibkPUE/Rj17JoS8dmfxsx9Y0o=","public_key": "ccHOGyAuDW7sgaNa8o6UyiLFr2M52RjkZWwnMLUqFi4=","result": "success"}'
 parameters: --login %s
 type:script_output
 message: mullvad: performing login for account: "%s"
@@ -52,20 +53,16 @@ description: mullvad: Perform login for account: "%s"
 
 
 [status]
-command: echo '{"active" : false,"can_add_ports" : false,"can_add_wg_peers" : true,"city_ports" : [],"expires" : "2022-06-27T21:58:38+00:00","expiry_unix" : 1656367118,"max_ports" : 5,"max_wg_peers" : 5,"ports" : [],"pretty_token" : "0824 9982 5001 6939","subscription" : null,"token" : "0824998250016939","wg_peers" : [{"app" : false,"can_add_ports" : false,"city_ports" : [],"created" : "2022-06-28","device_id" : "0f8c65c1-9df4-4db5-9c4d-7a8e86dad149","device_name" : "alert pup","ipv4_address" : "10.66.141.99/32","ipv6_address" : "fc00:bbbb:bbbb:bb01::3:8d62/128","key" : {"private" : "","public" : "zLVnO6DYynxeaSc0qECNJSnAqwkOvMU0xE82KqniugI="},"ports" : []}]}'
+#command: echo '{"account_status": "Expired on Jun 27, 2022 at 9:58 PM"}'
+#command: echo '{"account_status": "Expired on Jun 27, 2022 at 9:58 PM"}'
+command: echo '{"account_status": "Paid until Jun 27, 2022 at 9:58 PM"}'
 parameters: # --status %s
+#command:
+#    /usr/local/opnsense/scripts/OPNsense/Mullvad/account.py
+#parameters: --status %s
 type:script_output
-
-
-
-
-# [status]
-# command:
-#     /usr/local/opnsense/scripts/OPNsense/Mullvad/account.py
-# parameters: --status %s
-# type:script_output
-# message: mullvad: getting status for account: "%s"
-# description: mullvad: Get status for account: "%s"
+#message: mullvad: getting status for account: "%s"
+#description: mullvad: Get status for account: "%s"
 
 # [resolve]
 # command:/usr/local/sbin/dnscrypt-proxy -child -config /usr/local/etc/dnscrypt-proxy/dnscrypt-proxy.toml -resolve
